Small changes mosaic page

--- a/mosaic.html
+++ b/mosaic.html
@@ -107,7 +107,7 @@
           <img class="img" src="projectPhotos/Mosaic/login2.PNG" width="75%" />
       </div>
       <div class="img-column">
-        <img class="img" src="projectPhotos/Mosaic/login3.PNG" width="75%" />
+        <img class="img" src="projectPhotos/Mosaic/login3.png" width="75%" />
       </div>
     </div>
   </div>
@@ -124,10 +124,10 @@
     </p>
 
     <div class="row">
-      <div class="img-column" style="flex:75%">
+      <div class="img-column">
           <img  class="img" src="projectPhotos/Mosaic/enrollstudent.png" width="75%"/>
       </div>
-      <div class="img-column" style="flex:25%">
+      <div class="img-column">
         <img class="img" src="projectPhotos/Mosaic/dropstudent.png" width="75%"/>
       </div>
     </div>
@@ -145,11 +145,11 @@
     </p>
   
     <div class="row">
-      <div class="img-column" style="flex:30%">
+      <div class="img-column">
           <img  class="img" src="projectPhotos/Mosaic/sendemail.png" width="75%"/>
       </div>
-      <div class="img-column" style="flex:70%">
-        <img class="img" src="projectPhotos/Mosaic/profinbox.png" width="75%"/>
+      <div class="img-column">
+        <img class="img" src="projectPhotos/Mosaic/profinbox.png" width="80%"/>
       </div>
     </div>
   </div>
@@ -174,10 +174,7 @@
       </ol>
       <p class="lead">
       For the design of the application, I tried to keep it as simple as possible to increase usability for a variety of users.
-      Below, I have a diagram of how the layers interact to process user data - shown by a student login.
     </p>
-
-    <img src="projectPhotos/Mosaic/process.png"/>
 
   </div>
   <br/>
