Changed images on mosaic page

--- a/mosaic.html
+++ b/mosaic.html
@@ -119,16 +119,13 @@
       Another feature that was key to our application was the class management aspect. Students are able to enroll in classes, check class
       availability and drop classes. Professors are able to enroll to teach a class, view availability and drop teaching a class.
       Here we have more client-side scripting, that follows the same theme for displaying errors as the login system. Both students and professors
-      can only enroll in valid classes, and drop classes that they are already taking. Below are a few examples of the UI for class 
+      can only enroll in valid classes, and drop classes that they are already taking. Below is an example of the UI for class 
       management.
     </p>
 
     <div class="row">
-      <div class="img-column">
-          <img  class="img" src="projectPhotos/Mosaic/enrollstudent.png" width="75%"/>
-      </div>
-      <div class="img-column">
-        <img class="img" src="projectPhotos/Mosaic/dropstudent.png" width="75%"/>
+      <div class="img-column" style="flex:100%">
+          <img  class="img" src="projectPhotos/Mosaic/enrollstudent.png" width="100%"/>
       </div>
     </div>
   </div>
@@ -146,10 +143,16 @@
   
     <div class="row">
       <div class="img-column">
-          <img  class="img" src="projectPhotos/Mosaic/sendemail.png" width="75%"/>
+        <img class="img" src="projectPhotos/Mosaic/profinbox.png" width="100%"/>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="img-column">
+        <img class="img-hundo" src="projectPhotos/Mosaic/sendemail.png" width="75%"/>
       </div>
       <div class="img-column">
-        <img class="img" src="projectPhotos/Mosaic/profinbox.png" width="80%"/>
+        <img class="img-hundo" src="projectPhotos/Mosaic/announcements.png" width="75%"/>
       </div>
     </div>
   </div>
