Updated resume, added descriptions for car project and mosaic project

--- a/car.html
+++ b/car.html
@@ -78,10 +78,12 @@
   <div class="container">
     <h1 class="h3"> Introduction </h1>
     <p class="lead">
-      --Add description here--
+      Self Driving Cars and AI are two of the most cutting-edge fields of computer science at the moment. By creating my
+      own car simulation, I hoped to learn more about how these cars work, and how a car model can teach itself to drive
+      through reinforcement learning. My goal was to create a model that not only made it's way around the track, but found
+      the fastest and most efficient way to do it. So, I created my Self Driving Car Simulation.
     </p>
   </div>
-  <br/>
   <br/>
 
   <a class="anchor" id="collisions"></a>
