--- a/mosaic.html
+++ b/mosaic.html
@@ -84,7 +84,6 @@
       include a secure login, a messaging system, class announcement feeds and class management.
     </p>
   </div>
-  <br/>
 
   <a class="anchor" id="features"></a>
   <div class="container" style="padding-bottom:10px;">
@@ -163,9 +162,9 @@
   <div class="container" style="padding-bottom:10px;">
     <h1 class="h3">Architecture</h1>
     <p class="lead" >
-      I utilized a 5-tier architecture when designing this application, which consisted of: A Service Layer, Repository Layer, UI Layer, Model Layer and a Logic Layer. 
+      I utilized a 5-tier architecture when designing this application, which consisted of: a Service Layer, Repository Layer, UI Layer, Model Layer and a Logic Layer. 
       This made is much easier to maintain the abstraction of my program, and also maintain a seperation of concerns between the
-      modules. For example, the serivce layer handled verification, the repository layer handles database interactions through LINQ, and the model layer stores object data.
+      modules. For example, the serivce layer handled verification, the repository layer handles database interactions through LINQ queries, and the model layer stores object data.
       The process for performing user actions was:
     </p>
       <ol>
