--- a/cv.html
+++ b/cv.html
@@ -60,19 +60,17 @@
   </nav>
 
   <!-- Page Content -->
-  <div style="text-align: center">
-    <img src="cv/resume.png" width="60%"/>
-  </div>
+  <div>
+    <div style="text-align: center">
+      <img src="cv/kaelbosland_resume.png" width="60%"/>
+    </div>
 
-  <div style="text-align: center">
-    
-  </div>
-
-  <div style="text-align: center; padding-bottom: 15px;">
-      <a  href="cv/resume.pdf" target="_blank"> 
-        <img src="projectPhotos/bottombar/pdf.png" width="3%" />
-      </a>
-  </div>
+    <div style="text-align: center; padding: 20px;">
+        <a href="cv/kaelbosland_resume.pdf" target="_blank"> 
+          <img src="projectPhotos/bottombar/pdf.png" width="3%" />
+        </a>
+    </div>
+</div>
   <!-- /.container -->
 
   <!-- Footer -->
@@ -81,7 +79,7 @@
         <p class="m-0 text-center text-white">Copyright &copy; Kael Bosland 2019</p>
         <p class="m-0 text-center text-white">This site is currently under construction!</p>
       </div>
-      <div class="container">
+      <div class="container" style="margin-top:2%">
         <table style="margin:auto; text-align:center;">
             <tr> 
               <td style="padding:5px;"> <a href="mailto:kael.bosland10@gmail.com"> <img style="width: 75%; height: 75%;" src="projectPhotos/bottombar/gmail.jpg"> </a> </td>
